2012-11-26 Till Tantau <tantau@users.sourceforge.net>

	- Worked on gd documentation.
	
2012-11-21 Till Tantau <tantau@users.sourceforge.net>
	
	- New version of gd lib. The internals have been completely
	redone. In particular, no tikz libraries are needed for the
	individual algorithms any longer, all declarations are now
	done completely inside Lua. This makes gd usable (in
	principle) independently of tikz and pgf.
	- Because of this, all declarations of algorithms need to be
	redone. 

2012-11-10 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
	
	- external lib: fixed spurious white space (caused by 'up to date check')

2012-11-01 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- manual styles: improved robustness of auto cross references & active spaces

2012-10-18 Christophe Jorssen <cjorssen@users.sourceforge.net>

	- Fixed a bug with active colon in circuits lib. Probably more to
	fix in other libraries.
	
2012-10-11 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- Improved precision of math functions asin and acos (using linear
	interpolation instead of constant interpolation)

2012-09-27 Till Tantau <tantau@users.sourceforge.net>

	- Worked on gd.
	
2012-09-26 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
	- fixed pgfsys-pdftex.def : very old regression with \setbeamercovered{transparent}	and \pause
	Patch by Hendrik Vogt

2012-08-29 Till Tantau <tantau@users.sourceforge.net>

	- Added support for sublayouts in gd (not yet fully
	documented). This allows one to use several algorithms inside
	a single graph.
	
2012-06-28 Till Tantau <tantau@users.sourceforge.net>
	
	- Redone handling of clusters in gd yet again. Renamed them to
	"collections". Much better system now, can handle hyperedges,
	subgraphs and other stuff (in principle).
	- Nodes generated by a gd algorithm now have correct size
	information (this one was tricky!).
	
2012-06-22 Till Tantau <tantau@users.sourceforge.net>
	