@@ -21,6 +21,17 @@
 
 \label{section-gd-display-layer}
 
+A note of caution before we get started:
+
+\begin{quote}
+  \itshape You do not need to read this section in order to write new
+  graph drawing algorithms. It is of interest only to those wishing to
+  write programs that which to ``use'' the graph drawing system in a
+  similar way that \tikzname\ does for laying out graphs that are
+  generated and then passed down from the program to the graph drawing
+  system..
+\end{quote}
+
 
 \subsection{Introduction: The Interplay of the Different Layers}
 
