@@ -13,7 +13,7 @@
 
 \section{Introduction to Algorithmic Graph Drawing}
 
-{\noindent\emph{by Till Tantau}}
+\emph{by Till Tantau}
 
 \subsection{What Is Algorithmic Graph Drawing?}
 
@@ -269,3 +269,32 @@ follows:
 \end{enumerate}
 
 
+
+\subsection{Acknowledgements}
+
+Graph drawing in \tikzname\ began as a student's project under my
+supervision. Ren\'ee Ahrens, Olof-Joachim Frahm, Jens
+Kluttig, Matthias Schulz, and Stephan Schuster wrote the first
+prototype of a graph drawing system inside \tikzname\ that uses
+Lua\TeX\ for the implementation of graph drawing algorithms.
+
+This first, early version was greatly extended on the algorithmic side
+by Jannis Pohlmann who wrote his Diploma thesis on graph drawing under
+my supervision. He implemented, in particular, the Sugiyama method
+(|layered layout|) and force based algorithms. Also, he rewrote some
+of the code of the prototype.
+
+At some point it became apparent that the first implementation had a
+number of deficiencies, both concerning the structure, the interfaces,
+and (in particular) the performance. Because of this, I rewrote 
+the code of the graph drawing system, both on the \TeX\ side
+and on the Lua side in its current form. However, I would like to
+stress that without the work of the people mentioned above graph
+drawing in \tikzname\ would not exist.
+
+The documentation was written almost entirely by myself, though I did
+copy some paragraphs from Jannis's Diploma thesis, which I can highly
+recommend everyone to read. 
+
+In the future, I hope that other people will contribute algorithms,
+which will be available as libraries.
