@@ -15,8 +15,7 @@
 \begin{tikzlibrary}{graphdrawing}
   This package provides capabilities for automatic graph drawing. It
   requires that the document is typeset using Lua\TeX. This package
-  should work with \LuaTeX\ 0.45 or higher, which is included in all
-  current \TeX\ distributions. 
+  should work with \LuaTeX\ 0.54 or higher.
 \end{tikzlibrary}
 
 
@@ -44,7 +43,7 @@ command, which is defined by the |graphdrawing| library:
     mechanism  will search the texmf-trees in the usual manner and the
     dots in the file name get converted into directory slashes.
   \item If the above failed, try to |require| the string
-    |pgf.gd.|\meta{name}|.
+    |pgf.gd.|\meta{name}.
   \item If this fails, try to |require| the string
     \meta{name}|.library|.
   \item If this fails, try to |require| the string \meta{name}. If
@@ -380,8 +379,8 @@ placed:
 
 Every time a subgraph node is created, the  following style is execute: 
 
-\begin{key}{/tikz/every subgraph node}
-  Empty by default.
+\begin{key}{/tikz/every subgraph node (initially subgraph text top)}
+  Select a subgraph node style.
 \end{key}
 
 \begin{key}{/tikz/subgraph text none}
