@@ -1,3 +1,11 @@
+2012-11-27 Till Tantau <tantau@users.sourceforge.net>
+
+	- Renamed gd files to shorter versions: instead of
+	pgf/gd/model/pgf.gd.model.Edges.lua we now have
+	pgf/gd/model/Edge.lua and so on.
+	- Worked on gd documentation. Only binding doc is still a
+	mess.
+	
 2012-11-26 Till Tantau <tantau@users.sourceforge.net>
 
 	- Worked on gd documentation.
